--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
     <version>1.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>open-source-polarion-java-repo-template ... extension of Polarion ALM</name>
-    <description>This is a Polarion extension which provides ...</description>
-    <url>https://github.com/SchweizerischeBundesbahnen/ch.sbb.polarion.extension.extension-name</url>
+    <name>Polarion ALM extension to send calendar appointment from workflows</name>
+    <description>This is a Polarion extension which provides ability to send calendar appointments from WorkItem workflows</description>
+    <url>https://github.com/SchweizerischeBundesbahnen/ch.sbb.polarion.extension.mailworkflow</url>
 
     <licenses>
         <license>
             <name>The SBB License, Version 1.0</name>
-            <url>https://github.com/SchweizerischeBundesbahnen/ch.sbb.polarion.extension.extension-name/blob/main/LICENSES/SBB.txt</url>
+            <url>https://github.com/SchweizerischeBundesbahnen/ch.sbb.polarion.extension.mailworkflow/blob/main/LICENSES/SBB.txt</url>
         </license>
     </licenses>
 
@@ -40,7 +40,7 @@
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/SchweizerischeBundesbahnen/ch.sbb.polarion.extension.extension-name/issues</url>
+        <url>https://github.com/SchweizerischeBundesbahnen/ch.sbb.polarion.extension.mailworkflow/issues</url>
     </issueManagement>
 
     <properties>
