--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>ch.sbb.polarion.extensions</groupId>
         <artifactId>ch.sbb.polarion.extension.generic</artifactId>
-        <version>12.0.0</version>
+        <version>12.1.0</version>
     </parent>
 
     <artifactId>ch.sbb.polarion.extension.mailworkflow</artifactId>
@@ -133,6 +133,10 @@
                         <package>ch.sbb.polarion.extension.mailworkflow.rest.controller</package>
                     </resourcePackages>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.github.grigoriev</groupId>
+                <artifactId>pre-commit-run-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
