--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>ch.sbb.polarion.extensions</groupId>
         <artifactId>ch.sbb.polarion.extension.generic</artifactId>
-        <version>14.0.0</version>
+        <version>14.1.0</version>
     </parent>
 
     <artifactId>ch.sbb.polarion.extension.mailworkflow</artifactId>
@@ -48,6 +48,13 @@
         <maven-jar-plugin.Automatic-Module-Name>ch.sbb.polarion.extension.mailworkflow</maven-jar-plugin.Automatic-Module-Name>
 
         <web.app.name>${maven-jar-plugin.Extension-Context}</web.app.name>
+
+        <!-- Extension-specific Require-Bundle (in addition to common ones from parent POM):
+            com.polarion.platform
+            com.sun.activation.javax.activation.patched
+        -->
+        <maven-jar-plugin.Require-Bundle.extension>com.polarion.platform,com.sun.activation.javax.activation.patched</maven-jar-plugin.Require-Bundle.extension>
+        <maven-jar-plugin.Require-Bundle>${maven-jar-plugin.Require-Bundle.common},${maven-jar-plugin.Require-Bundle.extension}</maven-jar-plugin.Require-Bundle>
 
         <ical4j.version>4.2.3</ical4j.version>
         <javax.mail.version>1.6.2</javax.mail.version>
